--- a/Modacity/Modacity/ViewController/Details/PracticeHistoryDetailsRowView.xib
+++ b/Modacity/Modacity/ViewController/Details/PracticeHistoryDetailsRowView.xib
@@ -13,6 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PracticeHistoryDetailsRowView" customModule="Modacity" customModuleProvider="target">
             <connections>
+                <outlet property="imageViewImproveIcon" destination="J2B-67-KuE" id="16t-U9-To9"/>
                 <outlet property="imageViewStarIcon" destination="eT6-Fj-eth" id="zTt-hr-mQj"/>
                 <outlet property="labelImprovements" destination="sg2-Jv-cgZ" id="gbJ-Yk-TIZ"/>
                 <outlet property="labelStarRating" destination="8EU-4y-bZJ" id="DRB-pT-Rhe"/>
@@ -26,20 +27,21 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11:02 AM ~ 11:02 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2y-sp-YeY">
-                    <rect key="frame" x="11" y="9.5" width="287" height="15"/>
+                    <rect key="frame" x="0.0" y="9.5" width="306" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_star_filled" translatesAutoresizingMaskIntoConstraints="NO" id="eT6-Fj-eth">
-                    <rect key="frame" x="308" y="7.5" width="20" height="19"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_details_small_star" translatesAutoresizingMaskIntoConstraints="NO" id="eT6-Fj-eth">
+                    <rect key="frame" x="316" y="9.5" width="16" height="15"/>
+                    <color key="tintColor" red="0.30196078431372547" green="0.27058823529411763" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="20" id="7Va-T1-d7X"/>
+                        <constraint firstAttribute="width" constant="16" id="7Va-T1-d7X"/>
                         <constraint firstAttribute="width" secondItem="eT6-Fj-eth" secondAttribute="height" multiplier="20:19" id="gSk-cp-D77"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" text="4.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8EU-4y-bZJ">
-                    <rect key="frame" x="333" y="9.5" width="30" height="15"/>
+                    <rect key="frame" x="337" y="9.5" width="30" height="15"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="zl6-2O-BEW"/>
                     </constraints>
@@ -48,18 +50,19 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eeu-ey-y4V">
-                    <rect key="frame" x="368" y="9.5" width="1" height="15"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="372" y="9.5" width="1" height="15"/>
+                    <color key="backgroundColor" red="0.30196078431372547" green="0.27058823529411763" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="5v4-Ld-MC8"/>
                         <constraint firstAttribute="width" constant="1" id="xK2-9n-8dA"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="practice_tab_improve" translatesAutoresizingMaskIntoConstraints="NO" id="J2B-67-KuE">
-                    <rect key="frame" x="379" y="7.5" width="20" height="20"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_details_small_improvement" translatesAutoresizingMaskIntoConstraints="NO" id="J2B-67-KuE">
+                    <rect key="frame" x="383" y="9.5" width="16" height="16"/>
+                    <color key="tintColor" red="0.30196078431372547" green="0.27058823529411763" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="J2B-67-KuE" secondAttribute="height" multiplier="1:1" id="KFi-YC-k5k"/>
-                        <constraint firstAttribute="width" constant="20" id="SiC-ZO-j6y"/>
+                        <constraint firstAttribute="width" constant="16" id="SiC-ZO-j6y"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sg2-Jv-cgZ">
@@ -79,7 +82,7 @@
                 <constraint firstItem="J2B-67-KuE" firstAttribute="centerY" secondItem="9Df-qb-l5P" secondAttribute="centerY" id="J1f-Po-eqO"/>
                 <constraint firstItem="sg2-Jv-cgZ" firstAttribute="leading" secondItem="J2B-67-KuE" secondAttribute="trailing" constant="5" id="P8W-8D-DJj"/>
                 <constraint firstItem="r2y-sp-YeY" firstAttribute="centerY" secondItem="9Df-qb-l5P" secondAttribute="centerY" id="Qfp-4A-mzh"/>
-                <constraint firstItem="r2y-sp-YeY" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" constant="11" id="Rje-yB-JnR"/>
+                <constraint firstItem="r2y-sp-YeY" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" id="Rje-yB-JnR"/>
                 <constraint firstItem="J2B-67-KuE" firstAttribute="leading" secondItem="Eeu-ey-y4V" secondAttribute="trailing" constant="10" id="T4s-B8-1Ea"/>
                 <constraint firstItem="8EU-4y-bZJ" firstAttribute="leading" secondItem="eT6-Fj-eth" secondAttribute="trailing" constant="5" id="U3U-BR-zJ9"/>
                 <constraint firstItem="eT6-Fj-eth" firstAttribute="centerY" secondItem="9Df-qb-l5P" secondAttribute="centerY" id="WRG-hm-YCr"/>
@@ -94,7 +97,7 @@
         </view>
     </objects>
     <resources>
-        <image name="img_star_filled" width="40" height="38"/>
-        <image name="practice_tab_improve" width="30" height="30"/>
+        <image name="icon_details_small_improvement" width="14" height="14"/>
+        <image name="icon_details_small_star" width="14" height="14"/>
     </resources>
 </document>
