--- a/Modacity/Modacity/ViewController/Details/PracticeHistoryCell.xib
+++ b/Modacity/Modacity/ViewController/Details/PracticeHistoryCell.xib
@@ -26,8 +26,8 @@
                                 <rect key="frame" x="10" y="5" width="274" height="36"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="APRIL 4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocy-7f-doV">
-                                        <rect key="frame" x="10" y="10.5" width="45" height="15"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <rect key="frame" x="0.0" y="10.5" width="47.5" height="15"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <color key="textColor" red="0.56470588235294117" green="0.5607843137254902" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -55,7 +55,7 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="RWk-vU-kgc" secondAttribute="trailing" id="1S2-mU-oA6"/>
                                     <constraint firstItem="fov-CC-4hj" firstAttribute="leading" secondItem="vbN-Mt-dHL" secondAttribute="leading" id="9uP-Mv-eRu"/>
-                                    <constraint firstItem="ocy-7f-doV" firstAttribute="leading" secondItem="vbN-Mt-dHL" secondAttribute="leading" constant="10" id="Nzm-89-cxa"/>
+                                    <constraint firstItem="ocy-7f-doV" firstAttribute="leading" secondItem="vbN-Mt-dHL" secondAttribute="leading" id="Nzm-89-cxa"/>
                                     <constraint firstItem="8iS-EC-vKq" firstAttribute="centerY" secondItem="vbN-Mt-dHL" secondAttribute="centerY" id="Tfe-3U-VM8"/>
                                     <constraint firstAttribute="trailing" secondItem="fov-CC-4hj" secondAttribute="trailing" id="dRX-mp-0um"/>
                                     <constraint firstItem="RWk-vU-kgc" firstAttribute="centerY" secondItem="vbN-Mt-dHL" secondAttribute="centerY" id="djt-gc-4Sq"/>
@@ -73,7 +73,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.1803921568627451" green="0.1803921568627451" blue="0.30196078431372547" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.1803921568627451" green="0.1764705882352941" blue="0.30980392156862746" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="vbN-Mt-dHL" firstAttribute="leading" secondItem="MpL-fs-sDY" secondAttribute="leading" constant="10" id="0bJ-De-tnV"/>
                             <constraint firstAttribute="bottom" secondItem="WeT-Pf-QF9" secondAttribute="bottom" constant="8" id="NjH-hJ-Zst"/>
