--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -34,7 +34,7 @@
         <!--Details View Controller-->
         <scene sceneID="RX2-vF-yOX">
             <objects>
-                <viewController id="cJV-ma-hzf" customClass="DetailsViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cJV-ma-hzf" customClass="DetailsViewController" customModule="Modacity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zXZ-Gh-Ge0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -81,7 +81,7 @@
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AUw-r9-Jlv">
                                                 <rect key="frame" x="0.0" y="32" width="94" height="4"/>
-                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.45098039215686275" green="0.42745098039215684" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="4" id="0ag-8J-PIJ"/>
                                                 </constraints>
@@ -119,7 +119,7 @@
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Kr-L7-fNJ">
                                                 <rect key="frame" x="0.0" y="32" width="94" height="4"/>
-                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.45098039215686275" green="0.42745098039215684" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="4" id="iXZ-Dw-0iK"/>
                                                 </constraints>
@@ -157,7 +157,7 @@
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jpu-fw-esm">
                                                 <rect key="frame" x="0.0" y="32" width="94" height="4"/>
-                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.45098039215686275" green="0.42745098039215684" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="4" id="LUx-Oc-2tX"/>
                                                 </constraints>
@@ -195,7 +195,7 @@
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6oP-6a-Mo7">
                                                 <rect key="frame" x="0.0" y="32" width="94" height="4"/>
-                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.45098039215686275" green="0.42745098039215684" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="4" id="zvF-dc-JZC"/>
                                                 </constraints>
@@ -268,6 +268,10 @@
                     <navigationItem key="navigationItem" id="PmT-EC-dTj"/>
                     <connections>
                         <outlet property="imageViewHeader" destination="2LP-jm-Toe" id="NQk-zm-co5"/>
+                        <outlet property="labelTab1" destination="lch-e9-8kV" id="XrT-PJ-EsX"/>
+                        <outlet property="labelTab2" destination="Qu5-B0-gMM" id="BmN-Hn-Wdh"/>
+                        <outlet property="labelTab3" destination="9I9-xh-89H" id="De9-Yz-BkZ"/>
+                        <outlet property="labelTab4" destination="kzc-Iw-9q5" id="aBL-yl-Qz1"/>
                         <outlet property="labelTitle" destination="hyC-gO-fyW" id="KEm-zx-HvX"/>
                         <outlet property="viewIndicatorTab1" destination="AUw-r9-Jlv" id="JUX-2n-fRa"/>
                         <outlet property="viewIndicatorTab2" destination="4Kr-L7-fNJ" id="Pab-jo-ilc"/>
