--- a/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
@@ -774,7 +774,7 @@ note</string>
                                     <constraint firstAttribute="height" constant="93" id="gIu-HW-dqC"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
-                                <state key="normal" title="End">
+                                <state key="normal" title="Done">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
