--- a/Modacity/Modacity/ViewController/Details/PlaylistStatsView.xib
+++ b/Modacity/Modacity/ViewController/Details/PlaylistStatsView.xib
@@ -114,7 +114,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="Qk3-2N-Wbr" secondAttribute="bottom" constant="20" id="6qj-nC-CGK"/>
                                                                 <constraint firstItem="2nh-Da-jBc" firstAttribute="leading" secondItem="GHG-gh-v3A" secondAttribute="leading" constant="20" id="8f8-Wu-Vwc"/>
@@ -147,7 +147,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="EuQ-I5-T8E" firstAttribute="leading" secondItem="rPf-GN-6Xn" secondAttribute="leading" constant="20" id="9yv-LC-foY"/>
                                                                 <constraint firstItem="Fbl-pd-Gr2" firstAttribute="leading" secondItem="m1l-5g-FO4" secondAttribute="leading" id="GtF-I3-Ekr"/>
@@ -180,7 +180,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="pUC-qL-ls7" firstAttribute="top" secondItem="N0G-B4-IvY" secondAttribute="top" constant="15" id="1Ic-AV-kbg"/>
                                                                 <constraint firstItem="dqw-ou-Jts" firstAttribute="leading" secondItem="pUC-qL-ls7" secondAttribute="leading" id="1nw-Tc-hh9"/>
@@ -213,7 +213,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="8ZB-Vz-brF" firstAttribute="top" secondItem="VeP-j5-VC4" secondAttribute="bottom" constant="5" id="8EM-di-aK6"/>
                                                                 <constraint firstItem="8ZB-Vz-brF" firstAttribute="leading" secondItem="fik-ad-77y" secondAttribute="leading" id="FQK-sH-kNL"/>
@@ -253,7 +253,7 @@
                                             <rect key="frame" x="10" y="10" width="484" height="250"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcw-Ab-gcx">
-                                                    <rect key="frame" x="0.0" y="2" width="44" height="36"/>
+                                                    <rect key="frame" x="0.0" y="9" width="44" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="36" id="eX8-3y-ztd"/>
                                                         <constraint firstAttribute="width" constant="44" id="nDg-RG-vow"/>
@@ -264,13 +264,13 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THIS WEEK" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RtH-8t-Muw">
-                                                    <rect key="frame" x="40" y="13" width="404" height="14.5"/>
+                                                    <rect key="frame" x="40" y="20" width="404" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                     <color key="textColor" red="0.49411764705882355" green="0.47450980392156861" blue="0.80784313725490198" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGY-oV-Ol1">
-                                                    <rect key="frame" x="440" y="2" width="44" height="36"/>
+                                                    <rect key="frame" x="440" y="9" width="44" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="44" id="oZO-QZ-vjW"/>
                                                         <constraint firstAttribute="height" constant="36" id="p7f-fb-t2C"/>
@@ -281,14 +281,14 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RDx-Vg-Wqf">
-                                                    <rect key="frame" x="20" y="40.5" width="444" height="1"/>
+                                                    <rect key="frame" x="15" y="47.5" width="454" height="1"/>
                                                     <color key="backgroundColor" red="0.28627450980392155" green="0.27058823529411763" blue="0.44705882352941173" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="mUr-PU-FtN"/>
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p52-hy-QKj">
-                                                    <rect key="frame" x="20" y="51.5" width="444" height="183.5"/>
+                                                    <rect key="frame" x="15" y="58.5" width="454" height="171.5"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                             </subviews>
@@ -298,15 +298,15 @@
                                                 <constraint firstItem="RDx-Vg-Wqf" firstAttribute="top" secondItem="RtH-8t-Muw" secondAttribute="bottom" constant="13" id="9ZQ-E7-jMy"/>
                                                 <constraint firstItem="p52-hy-QKj" firstAttribute="top" secondItem="RDx-Vg-Wqf" secondAttribute="bottom" constant="10" id="K0g-2l-cuD"/>
                                                 <constraint firstItem="fGY-oV-Ol1" firstAttribute="centerY" secondItem="RtH-8t-Muw" secondAttribute="centerY" id="PJb-UB-sRM"/>
-                                                <constraint firstAttribute="bottom" secondItem="p52-hy-QKj" secondAttribute="bottom" constant="15" id="Y35-s3-D2l"/>
-                                                <constraint firstItem="RtH-8t-Muw" firstAttribute="top" secondItem="T8z-Z6-wg6" secondAttribute="top" constant="13" id="bRO-YU-zc2"/>
+                                                <constraint firstAttribute="bottom" secondItem="p52-hy-QKj" secondAttribute="bottom" constant="20" id="Y35-s3-D2l"/>
+                                                <constraint firstItem="RtH-8t-Muw" firstAttribute="top" secondItem="T8z-Z6-wg6" secondAttribute="top" constant="20" id="bRO-YU-zc2"/>
                                                 <constraint firstAttribute="trailing" secondItem="fGY-oV-Ol1" secondAttribute="trailing" id="bi0-UC-1Tt"/>
-                                                <constraint firstItem="RDx-Vg-Wqf" firstAttribute="leading" secondItem="T8z-Z6-wg6" secondAttribute="leading" constant="20" id="djx-hl-PiE"/>
-                                                <constraint firstItem="p52-hy-QKj" firstAttribute="leading" secondItem="T8z-Z6-wg6" secondAttribute="leading" constant="20" id="ea1-Ae-g6d"/>
-                                                <constraint firstAttribute="trailing" secondItem="RDx-Vg-Wqf" secondAttribute="trailing" constant="20" id="gOd-o6-GBQ"/>
+                                                <constraint firstItem="RDx-Vg-Wqf" firstAttribute="leading" secondItem="T8z-Z6-wg6" secondAttribute="leading" constant="15" id="djx-hl-PiE"/>
+                                                <constraint firstItem="p52-hy-QKj" firstAttribute="leading" secondItem="T8z-Z6-wg6" secondAttribute="leading" constant="15" id="ea1-Ae-g6d"/>
+                                                <constraint firstAttribute="trailing" secondItem="RDx-Vg-Wqf" secondAttribute="trailing" constant="15" id="gOd-o6-GBQ"/>
                                                 <constraint firstItem="pcw-Ab-gcx" firstAttribute="centerY" secondItem="RtH-8t-Muw" secondAttribute="centerY" id="iVw-vK-YoZ"/>
                                                 <constraint firstAttribute="trailing" secondItem="RtH-8t-Muw" secondAttribute="trailing" constant="40" id="mnE-bH-Bn5"/>
-                                                <constraint firstAttribute="trailing" secondItem="p52-hy-QKj" secondAttribute="trailing" constant="20" id="xVp-IP-mDV"/>
+                                                <constraint firstAttribute="trailing" secondItem="p52-hy-QKj" secondAttribute="trailing" constant="15" id="xVp-IP-mDV"/>
                                                 <constraint firstItem="pcw-Ab-gcx" firstAttribute="leading" secondItem="T8z-Z6-wg6" secondAttribute="leading" id="xpK-ET-fbX"/>
                                             </constraints>
                                         </view>
@@ -327,28 +327,28 @@
                                             <rect key="frame" x="10" y="10" width="484" height="116"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVAERAGE SESSION DURATION" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfo-zo-aG3">
-                                                    <rect key="frame" x="161.5" y="24" width="162" height="12"/>
+                                                    <rect key="frame" x="161.5" y="20" width="162" height="12"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                     <color key="textColor" red="0.53333333333333333" green="0.50196078431372548" blue="0.88235294117647056" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MINUTES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dy5-kT-QBg">
-                                                    <rect key="frame" x="222.5" y="91" width="39.5" height="10"/>
+                                                    <rect key="frame" x="222.5" y="86" width="39.5" height="10"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="8"/>
                                                     <color key="textColor" red="0.45098039215686275" green="0.42745098039215684" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="64" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbO-Hb-U7u">
-                                                    <rect key="frame" x="220.5" y="43" width="43.5" height="43"/>
+                                                    <rect key="frame" x="220.5" y="38" width="43.5" height="43"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="36"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.25490196079999999" green="0.24313725489999999" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="Dy5-kT-QBg" secondAttribute="bottom" constant="15" id="0Gr-UY-CfT"/>
-                                                <constraint firstItem="Qfo-zo-aG3" firstAttribute="top" secondItem="CeE-At-dXK" secondAttribute="top" constant="24" id="5QY-f1-xTy"/>
+                                                <constraint firstAttribute="bottom" secondItem="Dy5-kT-QBg" secondAttribute="bottom" constant="20" id="0Gr-UY-CfT"/>
+                                                <constraint firstItem="Qfo-zo-aG3" firstAttribute="top" secondItem="CeE-At-dXK" secondAttribute="top" constant="20" id="5QY-f1-xTy"/>
                                                 <constraint firstItem="RbO-Hb-U7u" firstAttribute="centerX" secondItem="Qfo-zo-aG3" secondAttribute="centerX" id="Ral-Ew-elv"/>
                                                 <constraint firstItem="Dy5-kT-QBg" firstAttribute="centerX" secondItem="RbO-Hb-U7u" secondAttribute="centerX" id="V7T-vh-Mqm"/>
                                                 <constraint firstItem="Qfo-zo-aG3" firstAttribute="centerX" secondItem="CeE-At-dXK" secondAttribute="centerX" id="kM1-Zf-oZM"/>
