--- a/Modacity/Modacity/ViewController/Details/StatisticsView.xib
+++ b/Modacity/Modacity/ViewController/Details/StatisticsView.xib
@@ -109,7 +109,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="Qk3-2N-Wbr" secondAttribute="bottom" constant="20" id="6qj-nC-CGK"/>
                                                                 <constraint firstItem="2nh-Da-jBc" firstAttribute="leading" secondItem="GHG-gh-v3A" secondAttribute="leading" constant="20" id="8f8-Wu-Vwc"/>
@@ -142,7 +142,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="EuQ-I5-T8E" firstAttribute="leading" secondItem="rPf-GN-6Xn" secondAttribute="leading" constant="20" id="9yv-LC-foY"/>
                                                                 <constraint firstItem="Fbl-pd-Gr2" firstAttribute="leading" secondItem="m1l-5g-FO4" secondAttribute="leading" id="GtF-I3-Ekr"/>
@@ -175,7 +175,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="pUC-qL-ls7" firstAttribute="top" secondItem="N0G-B4-IvY" secondAttribute="top" constant="15" id="1Ic-AV-kbg"/>
                                                                 <constraint firstItem="dqw-ou-Jts" firstAttribute="leading" secondItem="pUC-qL-ls7" secondAttribute="leading" id="1nw-Tc-hh9"/>
@@ -208,7 +208,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="8ZB-Vz-brF" firstAttribute="top" secondItem="VeP-j5-VC4" secondAttribute="bottom" constant="5" id="8EM-di-aK6"/>
                                                                 <constraint firstItem="8ZB-Vz-brF" firstAttribute="leading" secondItem="fik-ad-77y" secondAttribute="leading" id="FQK-sH-kNL"/>
@@ -300,28 +300,28 @@
                                             <rect key="frame" x="10" y="10" width="436" height="116"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AVERAGE SESSION DURATION" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfo-zo-aG3">
-                                                    <rect key="frame" x="140.5" y="24" width="155" height="12"/>
+                                                    <rect key="frame" x="140.5" y="20" width="155" height="12"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                     <color key="textColor" red="0.53333333333333333" green="0.50196078431372548" blue="0.88235294117647056" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MINUTES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dy5-kT-QBg">
-                                                    <rect key="frame" x="198" y="91" width="39.5" height="10"/>
+                                                    <rect key="frame" x="198" y="86" width="39.5" height="10"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="8"/>
                                                     <color key="textColor" red="0.45098039215686275" green="0.42745098039215684" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="64" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbO-Hb-U7u">
-                                                    <rect key="frame" x="195.5" y="43" width="43.5" height="43"/>
+                                                    <rect key="frame" x="195.5" y="38" width="43.5" height="43"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="36"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.25490196079999999" green="0.24313725489999999" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" red="0.26666666666666666" green="0.22745098039215686" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="Dy5-kT-QBg" secondAttribute="bottom" constant="15" id="0Gr-UY-CfT"/>
-                                                <constraint firstItem="Qfo-zo-aG3" firstAttribute="top" secondItem="CeE-At-dXK" secondAttribute="top" constant="24" id="5QY-f1-xTy"/>
+                                                <constraint firstAttribute="bottom" secondItem="Dy5-kT-QBg" secondAttribute="bottom" constant="20" id="0Gr-UY-CfT"/>
+                                                <constraint firstItem="Qfo-zo-aG3" firstAttribute="top" secondItem="CeE-At-dXK" secondAttribute="top" constant="20" id="5QY-f1-xTy"/>
                                                 <constraint firstItem="RbO-Hb-U7u" firstAttribute="centerX" secondItem="Qfo-zo-aG3" secondAttribute="centerX" id="Ral-Ew-elv"/>
                                                 <constraint firstItem="Dy5-kT-QBg" firstAttribute="centerX" secondItem="RbO-Hb-U7u" secondAttribute="centerX" id="V7T-vh-Mqm"/>
                                                 <constraint firstItem="Qfo-zo-aG3" firstAttribute="centerX" secondItem="CeE-At-dXK" secondAttribute="centerX" id="kM1-Zf-oZM"/>
