--- a/Modacity/Modacity/ViewController/Details/details.storyboard
+++ b/Modacity/Modacity/ViewController/Details/details.storyboard
@@ -267,6 +267,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="PmT-EC-dTj"/>
                     <connections>
+                        <outlet property="buttonMenu" destination="um7-j9-jjf" id="GxV-1j-7k2"/>
                         <outlet property="imageViewHeader" destination="2LP-jm-Toe" id="NQk-zm-co5"/>
                         <outlet property="labelTab1" destination="lch-e9-8kV" id="XrT-PJ-EsX"/>
                         <outlet property="labelTab2" destination="Qu5-B0-gMM" id="BmN-Hn-Wdh"/>
