--- a/Modacity/Modacity/ViewController/Improve/improve.storyboard
+++ b/Modacity/Modacity/ViewController/Improve/improve.storyboard
@@ -1131,6 +1131,7 @@ til the very end of the…</string>
                     <connections>
                         <outlet property="btnRecord" destination="XCN-Qq-HnU" id="J5l-u2-6mG"/>
                         <outlet property="buttonAudioPlay" destination="sAH-iB-9XP" id="Ken-hL-Jpb"/>
+                        <outlet property="buttonSaveRecord" destination="veN-hc-7Lg" id="ZO6-IL-7Al"/>
                         <outlet property="imageViewHeader" destination="WWB-Kv-nA3" id="nex-9r-5Jg"/>
                         <outlet property="imageViewRateDirection" destination="rGt-dK-zrf" id="F74-0Y-MZA"/>
                         <outlet property="labelHypothesis" destination="ce0-fW-BLl" id="c8g-Pg-dYu"/>
