--- a/Modacity/Modacity/ViewController/Notes/ButtonCell.xib
+++ b/Modacity/Modacity/ViewController/Notes/ButtonCell.xib
@@ -34,7 +34,7 @@
                             <action selector="onArchive:" destination="8Pw-EB-hGM" eventType="touchUpInside" id="e0d-go-ZcV"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOW ARCHIVED NOTES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCu-1V-3ez">
+                    <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOW ARCHIVED NOTES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCu-1V-3ez">
                         <rect key="frame" x="122.5" y="30" width="130.5" height="13.5"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="11"/>
                         <color key="textColor" white="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
