--- a/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
@@ -510,6 +510,7 @@
                         <outlet property="buttonAudioForward" destination="o4y-t0-Wkn" id="KvJ-nT-O8R"/>
                         <outlet property="buttonAudioPlay" destination="c98-Ae-dDF" id="U49-Zj-t1W"/>
                         <outlet property="buttonFavorite" destination="CqK-vm-U6A" id="LxK-kB-F3y"/>
+                        <outlet property="buttonSaveRecord" destination="Ovm-8S-GaC" id="OFD-yd-XKr"/>
                         <outlet property="buttonTimerUpDownArrow" destination="iGP-Iw-poe" id="Jus-ve-2AA"/>
                         <outlet property="collectionViewNotes" destination="WB3-aN-ciO" id="Imu-Ua-GgE"/>
                         <outlet property="constraintForImageHeaderViewHeight" destination="9Wo-Co-KTt" id="WFN-AL-uLx"/>
