--- a/Modacity/Modacity/ViewController/Improve/improve.storyboard
+++ b/Modacity/Modacity/ViewController/Improve/improve.storyboard
@@ -748,6 +748,7 @@ til the very end of the…</string>
                     <connections>
                         <outlet property="btnRecord" destination="D1v-0o-Nrh" id="62z-G8-cq4"/>
                         <outlet property="buttonAudioPlay" destination="MOH-Sk-ebe" id="4OI-4F-5nC"/>
+                        <outlet property="buttonSaveRecord" destination="Fco-M1-yrF" id="Qkg-zM-3qO"/>
                         <outlet property="imageViewHeader" destination="Esx-De-EDu" id="UGa-G6-UeC"/>
                         <outlet property="imageViewRateDirection" destination="dUA-x6-Fip" id="FvS-OU-HLz"/>
                         <outlet property="labelHypothesis" destination="dOc-S4-3Wh" id="lAZ-Yw-tfV"/>
