--- a/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
@@ -1222,6 +1222,7 @@ note</string>
                         <outlet property="buttonAudioForward" destination="0Ij-Bu-0sv" id="8bT-4S-275"/>
                         <outlet property="buttonAudioPlay" destination="61t-fl-RgG" id="TAq-KW-mlp"/>
                         <outlet property="buttonFavorite" destination="3ih-li-oGR" id="2c6-gc-b5a"/>
+                        <outlet property="buttonSaveRecord" destination="Shp-Kw-h4Y" id="hfO-CY-Z4K"/>
                         <outlet property="buttonTimerUpDownArrow" destination="Aa7-K8-Bf5" id="iIG-01-EiE"/>
                         <outlet property="collectionViewNotes" destination="iX4-0r-obp" id="lgt-ev-aHc"/>
                         <outlet property="constraintForImageHeaderViewHeight" destination="3qL-yK-UHX" id="Qqn-7m-Gmn"/>
@@ -1274,6 +1275,6 @@ note</string>
         <image name="walkthrough_rate_arrow_2" width="12" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="dLc-mu-N4Z"/>
+        <segue reference="Nwc-WJ-zdU"/>
     </inferredMetricsTieBreakers>
 </document>
